--- a/Chapter4.tex
+++ b/Chapter4.tex
@@ -247,7 +247,7 @@ In Table \ref{tab:ner-1d} we present the first degree fusion level (1F). The bes
 \begin{table}[t!]
 \centering
 
-\caption{NER F-measure results using second degree fusion (2F) operations. In $X_FX_SF$, $\hat{a}$ corresponds to the best performing matrix in the set $\{ X_S(\sstd, \slex),X_S(\slex, \sstd), \allowbreak X_S(\sstd, \ssyn)\}$. In $EX_FF$, depending on the dataset, $b^*_{\scriptscriptstyle EXEF}$  takes the best performing matrix from $\{X_F(\ssyn, \mlex), \allowbreak X_F(\slex, \mlex), X_F(\slex, \mstd), \allowbreak X_F(\ssyn, \mlex), X_F(\ssyn, \mstd) \}$. Finally, in $LX_FF$, $\hat{b}_{\scriptscriptstyle LX_FF}$ takes the best possible matrix from $\{X_F(\slex, \mstd), X_F(\ssyn, \mstd), \allowbreak X_F(\ssyn, \mlex) \}$. Results are obtained with the structured perceptron algorithm.}
+\caption{NER F-measure results using second degree fusion (2F) operations. In $X_FX_SF$, $\hat{a}$ corresponds to the best performing matrix in the set $\{ X_S(\sstd, \slex),X_S(\slex, \sstd), \allowbreak X_S(\sstd, \ssyn)\}$. In $EX_FF$, depending on the dataset, $b^*_{\scriptscriptstyle EX_FF}$  takes the best performing matrix from $\{X_F(\ssyn, \mlex), \allowbreak X_F(\slex, \mlex), X_F(\slex, \mstd), \allowbreak X_F(\ssyn, \mlex), X_F(\ssyn, \mstd) \}$. Finally, in $LX_FF$, $\hat{b}_{\scriptscriptstyle LX_FF}$ takes the best possible matrix from $\{X_F(\slex, \mstd), X_F(\ssyn, \mstd), \allowbreak X_F(\ssyn, \mlex) \}$. Results are obtained with the structured perceptron algorithm.}
 \label{tab:ner_2d}
 \begin{tabular}{@{}llccc@{}}
 	\toprule
@@ -281,7 +281,7 @@ $\mstd$ &$\hat{b}_{\scriptscriptstyle LX_FF}$           &  54.82   & \textbf{75.
            
 
 \paragraph{Second Degree Fusion} 
-The second degree fusion techniques (2F) presented in Table \ref{tab:ner_2d} show that the recombination of cross fusion techniques gets us closer to the early fusion baseline. Except for cross feature cross similarity fusion ($X_FX_SF$), the rest of the recombination schemes yield interesting results. First, in cross feature fusion, the best results, for the most part, are obtained while using the $\slex$ matrix combined with the output of $E(\mlex, \mstd)$, which is still far from the baseline values. Concerning, EXEF, we get already close to surpass the baselines with the $\mstd$ matrix, except for the CONLL dataset. In LXEF, even though the cross fusion $X_F(\ssyn, \mlex)$ is not the best performing, we found experimentally that by combining it with $\mlex$ through a late fusion, it gets  a strong complementary representation. Our intuition in this case was to complement $\mlex$ with itself but enriched with the $\ssyn$ information. In the following high degree fusion results we discover that indeed this propagation of information helps us beat the baselines we set before.
+The second degree fusion techniques (2F) presented in Table \ref{tab:ner_2d} show that the recombination of cross fusion techniques gets us closer to the early fusion baseline. Except for cross feature cross similarity fusion ($X_FX_SF$), the rest of the recombination schemes yield interesting results. First, in cross feature fusion, the best results, for the most part, are obtained while using the $\slex$ matrix combined with the output of $E(\mlex, \mstd)$, which is still far from the baseline values. Concerning, $EX_FF$, we get already close to surpass the baselines with the $\mstd$ matrix, except for the CONLL dataset. In $LX_FF$, even though the cross fusion $X_F(\ssyn, \mlex)$ is not the best performing, we found experimentally that by combining it with $\mlex$ through a late fusion, it gets  a strong complementary representation. Our intuition in this case was to complement $\mlex$ with itself but enriched with the $\ssyn$ information. In the following high degree fusion results we discover that indeed this propagation of information helps us beat the baselines we set before.
 
 
 \begin{table}[t]
@@ -711,7 +711,7 @@ On the other had, in second place, the operator $E(\mlex,X_F(\slex,\mlex))$ of t
 \begin{axis}[
 %	xtick distance={160},
     ybar=-0.5cm,
-    width=.8\linewidth,
+    width=.9\linewidth,
     enlargelimits=0.15,
     domain = 0:85,
     xmin=0, xmax=85,
@@ -738,9 +738,10 @@ On the other had, in second place, the operator $E(\mlex,X_F(\slex,\mlex))$ of t
 	    {$L(\msyn, X_F(\slex, \msyn))$},
 	    {$L(\mlex, X_F(\slex, \mlex))$},
 	    {$E(\mlex, L(\msyn, X_F(\slex, \msyn)))$},
-	    {$E(\mlex, L(\mlex, X_F(\slex, \mlex)))$}
+	    {$E(\mlex, L(\mlex, X_F(\slex, \mlex)))$},
+	    {Baseline MFS}
     },
-    xtick={0,5,...,80},
+    xtick={0,5,...,85},
     nodes near coords,
     nodes near coords align={vertical},
     x tick label style={rotate=90,anchor=east},
@@ -971,7 +972,7 @@ Both Semeval 2007 and Semeval 2010 tasks are first evaluated by an unsupervised 
 	   
 
 	   Baseline MFS		& 78.70 & 80.90 & 76.20 & 1.00\\ 	   	 	    
-%	   Semeval 2007 Best System& 81.60 & 86.80 & 75.70 & 1.15\\ 	 		   
+	   UoY(2007)& 77.70 & 81.60 & 73.30 & 9.30\\ 	 		   
        \bottomrule
 \end{tabular}
 \end{table}
@@ -1030,21 +1031,26 @@ Both Semeval 2007 and Semeval 2010 tasks are first evaluated by an unsupervised 
 	   \midrule
 	   \midrule
 	   Baseline 1c1word 		&	78.90	& 80.70&76.80 & 1.00 \\ 	   	 	    	   
-%	   Semeval 2007 Best Systems	&	78.70	& 80.80&76.30 & 3.06 \\ 	 
+	   UoY(2007)	&	56.10	& 65.80 &45.10 & 9.30 \\ 	 
 
 		   
        \bottomrule
 \end{tabular}
 \end{table}
 
+We analyze these results in terms of two main axes. First, as we want to know the pertinence of the proposed algorithm,  our algorithm is compared to the competition baseline and to the previous similar method from \cite{2007.Klapaftis.UOY}. Secondly, as before, we compare the use of single independent features ($\mlex$ and $\msyn$) and the trivial early fusion ($E(\mlex, \msyn)$) with the other more elaborated fusion operators. The goal is to show the interest of combining different types of information.
 
-In Table \ref{tab:sem2007_unsup_FS} we present the unsupervised F-measure evaluation results for our models as well as for some other systems: the previously presented UoY (version 2007) and UBC-AS \cite{Agirre2007UBC}, the best performing system according to this measure. Additionally, three baselines are included, the already-known 1c1word plus two new ones, the Random  baseline which assigns a sense randomly to each test instance; and the 1c1instance baseline, which attributes a unique sense to each one of the test instances. Finally, we also include the fusion operator that obtained the highest performance (according to the H-measure) in the experiments of the previous subsection, that is, the results of the $X_F(\slex,\mlex)$ fusion. As the last experiments were performed with spectral clustering, we will call this system SC$_\text{fusion}$. Furthermore, given that we generate representation spaces, we can use the same fusion matrix but this time using the graph-based algorithm presented in this subsection, instead of the spectral clustering used before. We call this system GB$_{\text{fusion}}$
+In Table \ref{tab:sem2007_PM_Recall}  we show the supervised recall results obtained for the Semeval 2007 corpus, using our proposed method, with fusion operators. In this table, as in the rest of the tables presented in this section, as before, the columns show the results for all the words, for the nouns, and for the verbs. Again, the final column indicates the number of induced clusters per system. 
 
-In this table, as in the rest of the tables presented in this section, as before, the columns show the results for all the words, for the nouns, and for the verbs. Again, the final column indicates the number of induced clusters per system. It is important to consider this value as the unsupervised metrics are biased towards systems with less number of induced clusters and thus to the 1c1word baseline. We aim to address this shortcoming with our H-measure.
+Our system, with a  $\mlex$ matrix is on par with the baseline MFS (assigning the most frequent sense to an instance) while producing more clusters and closer to the true number of average clusters. On the other hand, using the $\msyn$ is on the same level of performance while not beating the MFS baseline, but lightly performing better than using $\mlex$ in terms of verbs. Both systems improve on the inspiration method for our algorithm,  UoY (version 2007) \cite{2007.Klapaftis.UOY}, while not having to select thresholds specifically for each type of features used.
 
-Looking at the table, we can see that both our methods surpass the baselines and the system described before {UoY(2007)}. The best system of the competition, {UBC-AS} used also co-occurrence graphs and applied a random-walk based clustering algorithm over the vertices' similarity matrix. Still, our system induced a larger amount of senses, while retaining a competitive F-measure value. We also note that in this evaluation $\msyn$, the system using only co-occurrent dependency relations outperformed the lexical co-occurrence only system $\mlex$. It is very possible that this lack of lexical performance is due to the size of the surrounding words window, which in this case is selected to be the entire phrase were the word occurs. 
 
-With respect to our fusion space methods, SC$_{\text{fusion}}$ and GB$_{\text{fusion}}$ we find that both are competitive but cannot achieve a better performance that those systems prepared for the competition. Both systems are better than using independent features, according to the unsupervised F-measure. GB$_{\text{fusion}}$  Nonetheless, for supervised recall, only GB$_{\text{fusion}}$ beats both of the single feature matrices.
+Concerning the unsupervised F-measure evaluation, in Table \ref{tab:sem2007_PM_unsup_FS} we present the results for our models as well as for UoY. Additionally, one baseline is included, the 1c1word baseline. As described before, this baseline  groups all instances of a word into a single cluster. This baseline was not surpassed during the competition. Looking at the table, we can see that both our methods overcome the system described before {UoY(2007)}. Our systems induced a realtively close number of senses to the true number while retaining a competitive F-measure value. We also note that in this evaluation $\msyn$, the system using only co-occurrent dependency relations outperformed the lexical co-occurrence only system $\mlex$. It is very possible that this lack of lexical performance is due to the size of the surrounding words window, which in this case is selected to be the entire phrase were the word occurs. In this evaluation, using our method,  it is clearer that  verbs are  better addressed, and their senses better induced, using syntactic information compared to lexical information. It is indeed the same behavior shown while using the spectral clustering technique before.  We do note that our systems do not perform better than the 1c1word baseline. 
+
+
+In order to have a syntethic perspective of the results of our systems, we show in Figure \ref{fig:h_measure_semeval2007_nbased} the H-measure of our proposed model (using different fusion input matrices) as well as the baseline and UoY system. Again, as in the experiments with fusion operations, the best system SC$_{\text{fusion}}$ uses spectral clustering with a single cross media fusion operator, i.e., $X_F(\slex,\mlex)$. Close, in second place, we find the other fusion based system, this time using the network-based method proposed previously. Finally, the system UBC-AS  is ranked third by the H-measure.
+
+In general, it is interesting to notice that the fusion operators outperform again the single features and is on pair with other performing systems. What does seems unexpected is that the roles played by the $\msyn$ and $\mlex$ system is inverted regarding to the fusion experiments presented in the previous subsection. Indeed, using our network-based approach the performance of $\msyn$ is considerably larger than that of $\mlex$, whereas using spectral clustering the lexical information outranked (by a small margin) the syntactic information (based on dependencies). Again, we attribute this lack of performance of $\mlex$ to the size of the window employed, which seems to general to detect appropriate senses.
 
 \begin{figure}
 \centering
@@ -1053,10 +1059,10 @@ With respect to our fusion space methods, SC$_{\text{fusion}}$ and GB$_{\text{fu
 \begin{axis}[
 %	xtick distance={160},
     ybar=-0.5cm,
-    width=.8\linewidth,
+    width=.9\linewidth,
     enlargelimits=0.15,
-    domain = 0:80,
-    xmin=0, xmax=80,
+    domain = 0:90,
+    xmin=0, xmax=90,
 %    x=1mm, % Distance between the centers of the bars
 %    enlarge x limits={abs=1cm}, % The distance between the center of the first bar and the left edge
 %    enlarge y limits=false,
@@ -1080,9 +1086,11 @@ With respect to our fusion space methods, SC$_{\text{fusion}}$ and GB$_{\text{fu
 	    {$L(\msyn, X_F(\slex, \msyn))$},
 	    {$L(\mlex, X_F(\slex, \mlex))$},
 	    {$E(\mlex, L(\msyn, X_F(\slex, \msyn)))$},
-	    {$E(\mlex, L(\mlex, X_F(\slex, \mlex)))$}
+	    {$E(\mlex, L(\mlex, X_F(\slex, \mlex)))$},
+	    Baseline 1c1word,
+	    UoY(2007)
     },
-    xtick={0,5,...,80},
+    xtick={0,5,...,90},
     nodes near coords,
     nodes near coords align={vertical},
     x tick label style={rotate=90,anchor=east},
@@ -1091,7 +1099,7 @@ With respect to our fusion space methods, SC$_{\text{fusion}}$ and GB$_{\text{fu
 \addplot+[mark=none, bar width=.5cm]  coordinates {(10,82.3) (15,83.5) (20,76.6) (25,74.3) (30,75.6) (35,71.5) (40,70.2)};
 \addplot+[mark=none, bar width=.5cm]  coordinates {(45,73.7) (50,71.6) (55,81.6) (60,80.5) (65,76.5) (70,83.1)};
 \addplot+[mark=none, bar width=.5cm]  coordinates {(75,77.4) (80,81.3)};
-%\addplot+[mark=none, bar width=.5cm]  coordinates {(85,69.8)};
+\addplot+[mark=none, bar width=.5cm]  coordinates {(85,69.7) (90,48.0)};
 
 \legend{SF,1F,2F,HF, MFS}
 \end{axis}
@@ -1100,221 +1108,113 @@ With respect to our fusion space methods, SC$_{\text{fusion}}$ and GB$_{\text{fu
 \label{fig:h_measure_PM_semeval2007}
 \end{figure}
 
-\begin{table}[!tb]
-\centering
-\caption{Supervised Recall (SR) on the Semeval 2007 test set. The highest values for each column are in bold. Results are obtained with our proposed algorithm.}
-\begin{tabular}{@{}lrrrr@{}}
-\toprule
-\textbf{System} & \multicolumn{3}{c}{\textbf{Recall (\%)}} & \textbf{\#cl} \\
- & \textbf{all} & \textbf{nouns} & \textbf{verbs} & \\ \midrule
-I2R & \textbf{81.6} & \textbf{86.8} & 75.7 & 3.1 \\
-GB$_{\text{fusion}}$ & 79.6 & 83.3 & {76.3} & 3.4 \\
-$\mlex$ & 79.4 & 82.5 & 75.9 & 4.3 \\
-SC$_{\text{fusion}}$ & 79.2 & 82.3 & 75.7 & 3.6\\
-$\msyn$ & 79.1 & 81.5 & \textbf{76.4} & 3.3\\
-MFS & 78.7 & 80.9 & 76.2 & 1.0 \\
-UoY(2007) & 77.7 & 81.6 & 73.3 & 9.3 \\ \bottomrule
-\end{tabular}
 
-\label{tab:sem2007_sup_recall}
-\end{table}
-
-Moving onto the supervised results for Semeval 2007, in Table \ref{tab:sem2007_sup_recall} we show the results obtained concerning supervised recall.  In this table we include the competing system I2R \cite{Niu2007}, based on an Information Bottleneck based clustering algorithm, which obtains the best results according to all the words and nouns. Both our systems $\msyn$ and $\mlex$ beat the baseline of assigning the most frequent sense to an instance MFS). More interestingly, $\msyn$ was able to beat the MFS verb baseline, something that was not achieved during the competition. As was the case before, our systems beat UoY(2007).
-
-
-\begin{figure}
-\centering
-\begin{tikzpicture}{width=5cm,height=5cm}
-\pgfplotsset{compat=1.8}
-\begin{axis}[
-%	xtick distance={160},
-    ybar=-0.5cm,
-    width=.7\linewidth,
-    enlargelimits=0.15,
-    domain = 0:30,
-    xmin=0, xmax=30,
-%    x=1mm, % Distance between the centers of the bars
-%    enlarge x limits={abs=1cm}, % The distance between the center of the first bar and the left edge
-%    enlarge y limits=false,
-    legend style={at={(0.5,.97)},anchor=north,legend columns=-1},
-    ylabel={H-measure},
-%    xmin=0, xmax=85,
-    xticklabels={
-		UBC-AS,
-		I2R,
-		{GB$_{\text{fusion}}$},
-		$\mlex$,
-		{SC$_{\text{fusion}}$},
-		$\msyn$,
-		UoY(2007)
-    },
-    xtick={0,5,...,30},
-    nodes near coords,
-    nodes near coords align={vertical},
-    x tick label style={rotate=90,anchor=east},
-    ]
-\addplot+[mark=none, bar width=.5cm]  coordinates {(0,78.79) (5,72.48) (10,78.82) (15,70.02) (20,79.33) (25,77.93) (30,64.97)};
-%\legend{SF,1F,2F,HF}
-\end{axis}
-\end{tikzpicture}
-\caption{H-measure for the WSI/WSD task on the Semeval 2007 corpus using our network-based method as well as other systems, indicated on the x-axis. The best performing system was spectral clustering with a fusion representation space SC$_{\text{fusion}}$.}
-\label{fig:h_measure_semeval2007_nbased}
-\end{figure}
-
-We now look into the results from the H-measure perspective (see Figure \ref{fig:h_measure_semeval2007_nbased}). Again, as in the experiments with fusion opeartions, the best system SC$_{\text{fusion}}$ uses spectral clustering with a single cross media fusion operator, i.e., $X_F(\slex,\mlex)$. Close, in second place, we find the other fusion based system, this time using the network-based method proposed previously. Finally, the system UBC-AS  is ranked third by the H-measure.
-
-In general, it is interesting to notice that the fusion operators outperform again the single features and is on pair with other performing systems. What does seems unexpected is that the roles played by the $\msyn$ and $\mlex$ system is inverted regarding to the fusion experiments presented in the previous subsection. Indeed, using our network-based approach the performance of $\msyn$ is considerably larger than that of $\mlex$, whereas using spectral clustering the lexical information outranked (by a small margin) the syntactic information (based on dependencies). Again, we attribute this lack of performance of $\mlex$ to the size of the window employed, which seems to general to detect appropriate senses.
-
-
-As a way of determining where does both systems complement each other, in Figure \ref{fig:nouns_fs} and Figures  \ref{fig:verbs_fs2} and \ref{fig:verbs_fs3} we show the unsupervised F-measure value for nouns and verbs respectively (we split the verbs in two figures for visibility). We can see that, as the previous result tables indicated, $\msyn$ did better overall. Nonetheless, and what is most interesting in these figures, is that there are certain words (both nouns and verbs) that obtain better scores using $\mlex$ instead of $\msyn$ and vice versa. For example, the nouns \textit{area}, \textit{future}, and \textit{state} are better treated by $\mlex$, according to this measure, even if by a small margin. On the other hand, with respect to the verbs, the differences between performance are more important. Again, the $\mlex$ system does better while finding senses and assigning them to the verbs \textit{avoid}, \textit{fix}, and \textit{work}. %This information will be useful during the design of hybridization techniques between feature of our hypergraph structure.
 
  
-
-
-
-
- \begin{figure}[!htb]
-\centering
-\includegraphics[width=1\linewidth]{images/Chapitre5/tex_img_files/nouns_fs.pdf}
-\caption{Unsupervised F-measure results for the nouns of the Semeval 2007 test set.}
-\label{fig:nouns_fs}
-\end{figure}
-
- \begin{figure}[!htb]
-\centering
-\includegraphics[width=1\linewidth]{images/Chapitre5/tex_img_files/verbs_fs_2.pdf}
-\caption{Unsupervised F-measure results for the first half of verbs of the Semeval 2007 test set.}
-\label{fig:verbs_fs2}
-\end{figure}
-
- \begin{figure}[!htb]
-\centering
-\includegraphics[width=1\linewidth]{images/Chapitre5/tex_img_files/verbs_fs_3.pdf}
-\caption{Unsupervised F-measure results for the second half of verbs of the Semeval 2007 test set.}
-\label{fig:verbs_fs3}
-\end{figure}
 
 %todo add phrase that says that syntactic is not as good as seen in the paper where they compare a lot of distributional models... 	
 
 
 %todo split verbs?
-\subparagraph{Semeval 2010}
-In the Semeval 2010 dataset \cite{Semeval2010}, two unsupervised evaluation metrics are introduced: {V-measure} and {paired F-measure}. Briefly, the V-measure assesses the homogeneity or the quality of a clustering solution by measuring the degree to which each cluster consists of instances principally belonging to a single gold standard class. or homogeneity. It also takes into account completeness, or the level each gold standard class consists of instances primarily assigned to a single cluster. The V-measure is always greater than zero but it is not bounded to one as maximum value. We consider that the larger the measure, better. A well-known drawback is that the V-measure  is biased towards systems that yield many senses \cite{Semeval2010,VandeCruys2011,pedersen2010duluth}. We present this metric for completeness but we do not heavily base our conclusions on it.
-
-On the other hand, the paired F-measure evaluation transforms the clustering problem into a classification. Two instance pairs sets are generated, the first one coming from the system induced clusters, by including pairs of the instances found in each cluster. The second set of instance pairs is built from the gold standard classes. It contains pairs of the instances found in each class. We can then define \textit{Precision} and \textit{Recall}. Precision is computed as the ratio of the number of common instance pairs between the two sets divided by the total number of pairs in the clustering solution. Recall is the count of common instance pairs between the two sets divided by the total number of pairs in the gold standard. The paired F-measure is the harmonic mean of both quantities.
-
-Concerning the supervised evaluation, it follows the same of Semeval 2007, using recall as the main performance measure. The key difference is that the final results of the competition were obtained by reshuffling the data several times to avoid the issue of obtaining considerably different results with different splits of the data.
-
-\begin{table}[]
-\centering
-\caption{Unsupervised V-measure  on the Semeval 2010 test set. The highest values for each column are in bold. Our results are obtained with our proposed algorithm.}
-\begin{tabular}{@{}lrrrr@{}}
-\toprule
-\textbf{System} & \multicolumn{3}{c}{\textbf{V-measure (\%)}} & \textbf{\#cl} \\
- & \textbf{all} & \textbf{nouns} & \textbf{verbs} & \\ \midrule
-{Hermit} & \textbf{16.2} & \textbf{16.7} & \textbf{15.6} & 10.8 \\
-NMF$_{lib}$&11.8&13.5&9.4&4.8\\
-$\mlex$ & 11.6 & 8.8 & 11.9 & 10.5 \\
-Random & 4.4 & 4.2 & 4.6 & 4.0 \\
-$\msyn$ & 3.5 & 3.9 & 2.8 & 2.8 \\
-MFS & 0.0 & 0.0 & 0.0 & 1.0 \\ \bottomrule
-\end{tabular}
-
-\label{tab:sem2010_VM}
-\end{table}
-
-In Table \ref{tab:sem2010_VM} we present our systems compared to the baseline and other methods using during Semeval 2010. V-measure is a metric well-known for favoring systems producing a higher number of clusters \cite{VandeCruys2011,pedersen2010duluth}. Thus, it is considered not a very reliable metric. We have included it to have a global insight about the performance of our method. We remark that only $\mlex$ performed better than both baselines, random assignation of senses (Random) and using the most frequent sense (MFS). Also, we note that we included only the best performing systems, in this case NMF$_{lib}$ \cite{VandeCruys2011} and   Hermit \cite{JurgensS10}. The former  did not participate on the competition but was developed later. We include it henceforth to illustrate how systems variate from one position to another depending the metric used to assess the performance. The latter was the best method on this metric from the task challenge. It is important to notice that other systems exist between Hermit and $\mlex$. They were not included for the sake of clarity.
-
-\begin{table}[]
-\centering
-\caption{Unsupervised Paired F-measure for the Semeval 2010 test set. The highest values for each column are in bold. Our results are obtained with our proposed algorithm.}
-\begin{tabular}{@{}lrrrr@{}}
-\toprule
-\textbf{System} & \multicolumn{3}{c}{\textbf{Paired F-measure (\%)}} & \textbf{\#cl} \\
- & \textbf{all} & \textbf{nouns} & \textbf{verbs} & \\ \midrule
-
-MFS & \textbf{63.5} & \textbf{57.0} & \textbf{72.4} & 1.0 \\
-Duluth-WSI-SVD-Gap & 63.3 & \textbf{57.0} & \textbf{72.4} & 1.0 \\
-$\msyn$ & 53.6 & 50.1 & 58.7 & 2.8 \\
-NMF$_{lib}$&45.3&42.2&49.8&5.4\\
-$\mlex$ & 38.4 & 46.7 & 28.5 & 10.5 \\
-Random & 31.9 & 30.4 & 34.1 & 4.0 \\ \bottomrule
-\end{tabular}
-
-\label{tab:sem2010_FS}
-\end{table}
-
-The second unsupervised measure, Paired F-measure, can be seen in Table \ref{tab:sem2010_FS}. In this case both systems presented performed better than the random baseline. All the systems presented were able to beat the MFS baseline. We note that $\msyn$ does much better compared to $\mlex$ concerning verbs, namely 58\% vs. 28\% F-measure. Still, the results are low considering the best results of the competition, 63\% from the Duluth system \cite{Pedersen2010} , although again, it generates a number of senses very similar to the MFS baseline. Both our systems induce a considerable amount of clusters while keeping a descent F-measure. Our results are obtained with our proposed algorithm.
-
-
-
-\begin{table}[!tb]
-\centering
-\caption{Supervised recall  for Semeval 2010 test set (80\% mapping, 20\% evaluation). The highest values for each column are in bold. Results are obtained with our proposed algorithm.}
-\begin{tabular}{@{}lrrrr@{}}
-\toprule
-\textbf{System} & \multicolumn{3}{c}{\textbf{Recall (\%)}} & \textbf{\#cl}  \\
- & \textbf{all} & \textbf{nouns} & \textbf{verbs} & \\ \midrule
-%\textbf{Recall (\%)} & \textbf{all} & \textbf{nouns} & \textbf{verbs} \\ \midrule
-NMF$_{lib}$&\textbf{62.6}&57.3&\textbf{70.2} & 5.4\\
-UoY(2010) & 62.4 & \textbf{59.4} & 66.8 & 11.5\\
-
-$\mlex$ & 59.8 & 55.8 & 67.4 & 10.5\\
-$\msyn$ & 59.3 & 53.9 & 67.2 & 2.8\\
-MFS & 58.7 & 53.2 & 66.6 & 1.0\\
-Random & 57.3 & 51.5 & 65.7 & 4.0\\ \bottomrule
-
-\end{tabular}
-
-
-\label{tab:sem2010_SR}
-\end{table}
-
-
-Finally, we in Table \ref{tab:sem2010_SR} we show the supervised Recall results of Semeval 2010. The best performing algorithm shown is NMF$_{lib}$. During the competition, UoY(2010) was the best method. It is a graph-based algorithm which shares the name with the UoY(2007)  system presented in Semeval 2007, but it is a different  approach. Concerning our systems, in this evaluation they seem to perform the best, or in a comparable level, to the top methods.  We find that in general our systems seem to perform better on the Semeval 2007 dataset. Discovering the reason could shed light into improving the performance on the Semeval 2010 test set. Given the results, it seems like a combination of features (syntactic plus lexical) in  a single algorithm could yield better results. 
-
-Again, in order to find the overall best systems, we present the H-measure as before. This time the H-measure will be the harmonic mean of the newly introduced unsupervised paired F-measure instead of the plain F-measure used before. The supervised recall stays also as before. We do not employ the V-measure for the reasons exposed before, namely it is biased towards systems that generate many senses. Ideally, the paired F-measure was conceived to punish systems that produced less or more senses than the true average number of senses for each target word. In reality, it does not seem to be the case. We present in Figure \ref{fig:h_measure_semeval2010} the H-measure ($\delta=3.79$) results for the systems discussed previously in the Semeval 2010 context. Duluth-WSI-SVD-Gap is the best system overall, followed by our approach using $\msyn$ as input matrix. 
-
-Looking at the results, we argue that the Semeval 2010 task was more complex than Semeval 2007. We believe it is in part due to the fact that there are more verbs in the dataset, which are always harder to disambiguate than nouns. The dataset was also considerably larger, which may have introduced noise and required more sophisticated filtering techniques. We see that our system $\mlex$ performs poorly. Indeed, it generates too many senses, which is a symptom of poorly generated clusters, that is, the clusters found are not distinctive nor cohesive enough to enclose whole senses. On the other hand $\msyn$ does reasonably well, maybe in part due to the fact that again there are more verbs whose senses are better distinguished   using syntactic information.
-
-
-
-\begin{figure}
-\centering
-\begin{tikzpicture}{width=5cm,height=5cm}
-\pgfplotsset{compat=1.8}
-\begin{axis}[
-%	xtick distance={160},
-    ybar=-0.5cm,
-    width=.6\linewidth,
-    enlargelimits=0.15,
-    domain = 0:20,
-    xmin=0, xmax=20,
-%    x=1mm, % Distance between the centers of the bars
-%    enlarge x limits={abs=1cm}, % The distance between the center of the first bar and the left edge
-%    enlarge y limits=false,
-    legend style={at={(0.5,.97)},anchor=north,legend columns=-1},
-    ylabel={H-measure},
-%    xmin=0, xmax=85,
-    xticklabels={
-		Duluth-WSI-SVD-Gap,
-		$\msyn$,
-		{NMF$_{\text{lib}}$},
-		$\mlex$,
-		UoY(2010)
-    },
-    xtick={0,5,...,20},
-    nodes near coords,
-    nodes near coords align={vertical},
-    x tick label style={rotate=90,anchor=east},
-    ]
-\addplot+[mark=none, bar width=.5cm]  coordinates {(0,61.05) (5,56.89) (10,52.93) (15,46.52) (20,55.08)};
-%\legend{SF,1F,2F,HF}
-\end{axis}
-\end{tikzpicture}
-\caption{H-measure for the WSI/WSD task on the Semeval 2010 corpus using our network-based method as well as other systems, indicated on the x-axis. The best performing system is Duluth-WSI-SVD-Gap, while our best method is that based on syntactic information $\msyn$.}
-\label{fig:h_measure_semeval2010}
-\end{figure}
+%\subparagraph{Semeval 2010}
+%In the Semeval 2010 dataset \cite{Semeval2010}, two unsupervised evaluation metrics are introduced: {V-measure} and {paired F-measure}. Briefly, the V-measure assesses the homogeneity or the quality of a clustering solution by measuring the degree to which each cluster consists of instances principally belonging to a single gold standard class. or homogeneity. It also takes into account completeness, or the level each gold standard class consists of instances primarily assigned to a single cluster. The V-measure is always greater than zero but it is not bounded to one as maximum value. We consider that the larger the measure, better. A well-known drawback is that the V-measure  is biased towards systems that yield many senses \cite{Semeval2010,VandeCruys2011,pedersen2010duluth}. We chose not to present this metric given the reasons stated before.
+%
+%On the other hand, the paired F-measure evaluation transforms the clustering problem into a classification. Two instance pairs sets are generated, the first one coming from the system induced clusters, by including pairs of the instances found in each cluster. The second set of instance pairs is built from the gold standard classes. It contains pairs of the instances found in each class. We can then define {Precision} and {Recall}. Precision is computed as the ratio of the number of common instance pairs between the two sets divided by the total number of pairs in the clustering solution. Recall is the count of common instance pairs between the two sets divided by the total number of pairs in the gold standard. The paired F-measure is the harmonic mean of both quantities.
+%
+%Concerning the supervised evaluation, it follows the same of Semeval 2007, using recall as the main performance measure. The key difference is that the final results of the competition were obtained by reshuffling the data several times to avoid the issue of obtaining considerably different results with different splits of the data.
+%
+%In Table \ref{tab:sem2010_VM} we present our systems compared to the baseline and other methods using during Semeval 2010. V-measure is a metric well-known for favoring systems producing a higher number of clusters \cite{VandeCruys2011,pedersen2010duluth}. Thus, it is considered not a very reliable metric. We have included it to have a global insight about the performance of our method. We remark that only $\mlex$ performed better than both baselines, random assignation of senses (Random) and using the most frequent sense (MFS). Also, we note that we included only the best performing systems, in this case NMF$_{lib}$ \cite{VandeCruys2011} and   Hermit \cite{JurgensS10}. The former  did not participate on the competition but was developed later. We include it henceforth to illustrate how systems variate from one position to another depending the metric used to assess the performance. The latter was the best method on this metric from the task challenge. It is important to notice that other systems exist between Hermit and $\mlex$. They were not included for the sake of clarity.
+%
+%\begin{table}[]
+%\centering
+%\caption{Unsupervised Paired F-measure for the Semeval 2010 test set. The highest values for each column are in bold. Our results are obtained with our proposed algorithm.}
+%\begin{tabular}{@{}lrrrr@{}}
+%\toprule
+%\textbf{System} & \multicolumn{3}{c}{\textbf{Paired F-measure (\%)}} & \textbf{\#cl} \\
+% & \textbf{all} & \textbf{nouns} & \textbf{verbs} & \\ \midrule
+%
+%MFS & \textbf{63.5} & \textbf{57.0} & \textbf{72.4} & 1.0 \\
+%Duluth-WSI-SVD-Gap & 63.3 & \textbf{57.0} & \textbf{72.4} & 1.0 \\
+%$\msyn$ & 53.6 & 50.1 & 58.7 & 2.8 \\
+%NMF$_{lib}$&45.3&42.2&49.8&5.4\\
+%$\mlex$ & 38.4 & 46.7 & 28.5 & 10.5 \\
+%Random & 31.9 & 30.4 & 34.1 & 4.0 \\ \bottomrule
+%\end{tabular}
+%
+%\label{tab:sem2010_FS}
+%\end{table}
+%
+%The second unsupervised measure, Paired F-measure, can be seen in Table \ref{tab:sem2010_FS}. In this case both systems presented performed better than the random baseline. All the systems presented were able to beat the MFS baseline. We note that $\msyn$ does much better compared to $\mlex$ concerning verbs, namely 58\% vs. 28\% F-measure. Still, the results are low considering the best results of the competition, 63\% from the Duluth system \cite{Pedersen2010} , although again, it generates a number of senses very similar to the MFS baseline. Both our systems induce a considerable amount of clusters while keeping a descent F-measure. Our results are obtained with our proposed algorithm.
+%
+%
+%
+%\begin{table}[!tb]
+%\centering
+%\caption{Supervised recall  for Semeval 2010 test set (80\% mapping, 20\% evaluation). The highest values for each column are in bold. Results are obtained with our proposed algorithm.}
+%\begin{tabular}{@{}lrrrr@{}}
+%\toprule
+%\textbf{System} & \multicolumn{3}{c}{\textbf{Recall (\%)}} & \textbf{\#cl}  \\
+% & \textbf{all} & \textbf{nouns} & \textbf{verbs} & \\ \midrule
+%%\textbf{Recall (\%)} & \textbf{all} & \textbf{nouns} & \textbf{verbs} \\ \midrule
+%NMF$_{lib}$&\textbf{62.6}&57.3&\textbf{70.2} & 5.4\\
+%UoY(2010) & 62.4 & \textbf{59.4} & 66.8 & 11.5\\
+%
+%$\mlex$ & 59.8 & 55.8 & 67.4 & 10.5\\
+%$\msyn$ & 59.3 & 53.9 & 67.2 & 2.8\\
+%MFS & 58.7 & 53.2 & 66.6 & 1.0\\
+%Random & 57.3 & 51.5 & 65.7 & 4.0\\ \bottomrule
+%
+%\end{tabular}
+%
+%
+%\label{tab:sem2010_SR}
+%\end{table}
+%
+%
+%Finally, we in Table \ref{tab:sem2010_SR} we show the supervised Recall results of Semeval 2010. The best performing algorithm shown is NMF$_{lib}$. During the competition, UoY(2010) was the best method. It is a graph-based algorithm which shares the name with the UoY(2007)  system presented in Semeval 2007, but it is a different  approach. Concerning our systems, in this evaluation they seem to perform the best, or in a comparable level, to the top methods.  We find that in general our systems seem to perform better on the Semeval 2007 dataset. Discovering the reason could shed light into improving the performance on the Semeval 2010 test set. Given the results, it seems like a combination of features (syntactic plus lexical) in  a single algorithm could yield better results. 
+%
+%Again, in order to find the overall best systems, we present the H-measure as before. This time the H-measure will be the harmonic mean of the newly introduced unsupervised paired F-measure instead of the plain F-measure used before. The supervised recall stays also as before. We do not employ the V-measure for the reasons exposed before, namely it is biased towards systems that generate many senses. Ideally, the paired F-measure was conceived to punish systems that produced less or more senses than the true average number of senses for each target word. In reality, it does not seem to be the case. We present in Figure \ref{fig:h_measure_semeval2010} the H-measure ($\delta=3.79$) results for the systems discussed previously in the Semeval 2010 context. Duluth-WSI-SVD-Gap is the best system overall, followed by our approach using $\msyn$ as input matrix. 
+%
+%Looking at the results, we argue that the Semeval 2010 task was more complex than Semeval 2007. We believe it is in part due to the fact that there are more verbs in the dataset, which are always harder to disambiguate than nouns. The dataset was also considerably larger, which may have introduced noise and required more sophisticated filtering techniques. We see that our system $\mlex$ performs poorly. Indeed, it generates too many senses, which is a symptom of poorly generated clusters, that is, the clusters found are not distinctive nor cohesive enough to enclose whole senses. On the other hand $\msyn$ does reasonably well, maybe in part due to the fact that again there are more verbs whose senses are better distinguished   using syntactic information.
+%
+%
+%
+%\begin{figure}
+%\centering
+%\begin{tikzpicture}{width=5cm,height=5cm}
+%\pgfplotsset{compat=1.8}
+%\begin{axis}[
+%%	xtick distance={160},
+%    ybar=-0.5cm,
+%    width=.6\linewidth,
+%    enlargelimits=0.15,
+%    domain = 0:20,
+%    xmin=0, xmax=20,
+%%    x=1mm, % Distance between the centers of the bars
+%%    enlarge x limits={abs=1cm}, % The distance between the center of the first bar and the left edge
+%%    enlarge y limits=false,
+%    legend style={at={(0.5,.97)},anchor=north,legend columns=-1},
+%    ylabel={H-measure},
+%%    xmin=0, xmax=85,
+%    xticklabels={
+%		Duluth-WSI-SVD-Gap,
+%		$\msyn$,
+%		{NMF$_{\text{lib}}$},
+%		$\mlex$,
+%		UoY(2010)
+%    },
+%    xtick={0,5,...,20},
+%    nodes near coords,
+%    nodes near coords align={vertical},
+%    x tick label style={rotate=90,anchor=east},
+%    ]
+%\addplot+[mark=none, bar width=.5cm]  coordinates {(0,61.05) (5,56.89) (10,52.93) (15,46.52) (20,55.08)};
+%%\legend{SF,1F,2F,HF}
+%\end{axis}
+%\end{tikzpicture}
+%\caption{H-measure for the WSI/WSD task on the Semeval 2010 corpus using our network-based method as well as other systems, indicated on the x-axis. The best performing system is Duluth-WSI-SVD-Gap, while our best method is that based on syntactic information $\msyn$.}
+%\label{fig:h_measure_semeval2010}
+%\end{figure}
 
 
 
